# MiMA

./: .gitignore  CMakeLists.txt  LICENSE.txt  README  README.md  com_mess  it_jobscript  simple_jobscript  simple_jobscript~
analysis/: Setup_Paths.py  contourfstyle.mplstyle  notebook.mplstyle  plotClim.ipynb  plotColdpoint.ipynb  presentation.mplstyle
cmake/: FindNetCDF.cmake
docs/: GeneralInformation.md  GettingStarted.md  Parameters.md  README.md  Versions.md
exp/: compilescript.csh  diag_table  field_table  fms_runscript  input.nml  namelists  nci_runscript.sh  nyu_compilescript~  path_names  path_names.html  path_names.orig  path_names.tmp  path_names_bull~  path_names_norrtm  path_names_rrtmg_lw
input/: NH_StatWavePaper.nml  PTRBnamelist_Wave1_ZS0K_ZA12K_10days_45E.nml  PTRBnamelist_Wave1_ZS3K_10days_ZA6K_10days_45E.nml  SH_StatWavePaper.nml  benchmark_analysis.py  diag_table  input.nml  input_benchmark.nml  o3_mmr.nc  o3_vmr.nc  run_benchmark.sh
input/INPUT/: ozone_preindustrialCMIP5_annualaverage.nc
input/auxiliaries/orography/: lmask.T42.nc
input/auxiliaries/ozone/: ozone_pi.nc
input/bench_files/: P_Ts_extreme.nc  P_Ts_seasonal.nc  daily_seasonal.nc  ts_global.nc
input/benchmark/: benchmark_analysis.py  benchmark_environment.yml  run_benchmark.sh
input/benchmark/INPUT/: ozone_pi.nc
input/benchmark/bench_files/: P_Ts_extreme.nc  P_Ts_seasonal.nc  daily_seasonal.nc  ts_global.nc
input/examples/: NH_StatWavePaper.nml  README.md
input/from_papers/: README.md
input/namelists/: NH_StatWavePaper.nml  README.md  SH_StatWavePaper.nml  Untangling_CTRL.nml
postprocessing/: mppnccombine.c  output_to_input.py
src/: .list_paths.doc.lst  .list_paths.src.lst  path_names  path_names.html  path_names_norrtm
src/atmos_coupled/: CMakeLists.txt  atmos_model.f90  atmos_model.html
src/atmos_coupled/CVS/: Entries  Repository
src/atmos_param/: CMakeLists.txt
src/atmos_param/CVS/: Entries  Repository
src/atmos_param/astronomy/: astronomy.f90
src/atmos_param/betts_miller/: betts_miller.f90  bm_massflux.f90  bm_omp.f90
src/atmos_param/cg_drag/: cg_drag.f90  cg_drag.f90~  cg_drag_alexander_edit.f90  cg_drag_earlier_attempt.f90  cg_drag_memphis_AM2.f90  cg_drag_riga_AM3.f90  cg_drag_riga_AM3.f90~  differences_between_alexender_edit-memphisAM2  differences_between_alexender_edit-rigaAM3  epg_cg_drag.f90.100611  epg_cg_drag.f90.101117  epg_cg_drag.f90.110113  epg_cg_drag.f90.110720C  epg_cg_drag.f90.110725C  epg_cg_drag.f90.110726  epg_cg_drag.f90.111110
src/atmos_param/cloud_generator/: betaDistribution.f90
src/atmos_param/cloud_rad/: cloud_rad.f90  cloud_rad.html
src/atmos_param/cu_mo_trans/: cu_mo_trans.f90  cu_mo_trans.html
src/atmos_param/damping_driver/: damping_driver.f90
src/atmos_param/diag_integral/: diag_integral.f90
src/atmos_param/diffusivity/: diffusivity.f90
src/atmos_param/donner_deep/: donner_deep.f90
src/atmos_param/dry_adj/: dry_adj.f90  dry_adj.html
src/atmos_param/edt/: edt.f90
src/atmos_param/entrain/: entrain.f90
src/atmos_param/grey_radiation/: grey_radiation.f90
src/atmos_param/local_heating/: local_heating.f90
src/atmos_param/moist_conv/: moist_conv.f90  (+1 more)
src/atmos_shared/: CMakeLists.txt
src/atmos_spectral/: CMakeLists.txt
src/coupler/: CMakeLists.txt  coupler_main.f90  coupler_main.html  flux_exchange.f90  flux_exchange.html  simple_surface.f90  simple_surface.f90.old  simple_surface.f90.old2  surface_flux.f90  surface_flux.html
src/exp_control/: core.nml  diag_table  field_table  phys.nml
src/ice_param/: CMakeLists.txt  ocean_rough.f90
src/runfiles/: run_spectral_benchmark_grey_control  run_spectral_benchmark_grey_control~
src/shared/: CMakeLists.txt
(+364 files in other folders)
